Added favicon & social banners

--- a/index.html
+++ b/index.html
@@ -17,14 +17,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- HTML Meta Tags -->
     <title>Muhammadh Hameez | Web Developer, Designer, Technophile.</title>
     <meta
       name="description"
-      content="Self-taught web developer, designer & technophile from Sri Lanka,
-      with 20 solar revolutions fueling my passion. I transform ideas
-      into impactful web experiences by blending my expertise in coding,
-      UI/UX design & digital marketing."
+      content="Self-taught web developer, designer & technophile from Sri Lanka, with 20 solar revolutions fueling my passion. I transform ideas into impactful web experiences by blending my expertise in coding, UI/UX design & digital marketing."
     />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://hameezexe.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Muhammadh Hameez | Web Developer, Designer, Technophile."
+    />
+    <meta
+      property="og:description"
+      content="Self-taught web developer, designer & technophile from Sri Lanka, with 20 solar revolutions fueling my passion. I transform ideas into impactful web experiences by blending my expertise in coding, UI/UX design & digital marketing."
+    />
+    <meta
+      property="og:image"
+      content="https://opengraph.b-cdn.net/production/images/06c90457-57c2-4a3c-bb5b-6dcbd6b3f064.png?token=tmSzFyRL5GsskR5CnBDTmLNWdsIN8BvuLObTbpDJMZI&height=630&width=1200&expires=33261185833"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="hameezexe.github.io" />
+    <meta property="twitter:url" content="https://hameezexe.github.io/" />
+    <meta
+      name="twitter:title"
+      content="Muhammadh Hameez | Web Developer, Designer, Technophile."
+    />
+    <meta
+      name="twitter:description"
+      content="Self-taught web developer, designer & technophile from Sri Lanka, with 20 solar revolutions fueling my passion. I transform ideas into impactful web experiences by blending my expertise in coding, UI/UX design & digital marketing."
+    />
+    <meta
+      name="twitter:image"
+      content="https://opengraph.b-cdn.net/production/images/06c90457-57c2-4a3c-bb5b-6dcbd6b3f064.png?token=tmSzFyRL5GsskR5CnBDTmLNWdsIN8BvuLObTbpDJMZI&height=630&width=1200&expires=33261185833"
+    />
+
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
