--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
           <div
             class="social socialCol animate__animated animate__fadeInLeft animate__slower"
           >
+            <a href="https://wa.me/94704404505" target="_blank"
+              ><span><i class="fa-brands fa-whatsapp"></i></span
+            ></a>
             <a href="mailto:hameezexe@gmail.com"
               ><span><i class="fa-solid fa-envelope-open"></i></span
             ></a>
@@ -140,9 +143,6 @@
             ></a>
             <a href="https://x.com/HameezExE" target="_blank"
               ><span><i class="fa-brands fa-x-twitter"></i></span
-            ></a>
-            <a href="https://www.threads.net/@hameezexe" target="_blank"
-              ><span><i class="fa-brands fa-threads"></i></span
             ></a>
           </div>
           <div class="heroText">
@@ -506,25 +506,25 @@
               <h6>hameezexe@gmail.com</h6>
             </div>
             <div class="social">
-              <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
+              <a href="https://wa.me/94704404505" target="_blank"
                 ><span
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast"
+                  ><i class="fa-brands fa-whatsapp"></i></span
+              ></a>
+              <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
+                ><span
+                  class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-1s"
                   ><i class="fa-brands fa-linkedin"></i></span
               ></a>
               <a href="https://www.github.com/HameezExE" target="_blank"
                 ><span
-                  class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-1s"
+                  class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
                   ><i class="fa-brands fa-github"></i></span
               ></a>
               <a href="https://www.x.com/HameezExE" target="_blank"
                 ><span
-                  class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
-                  ><i class="fa-brands fa-x-twitter"></i></span
-              ></a>
-              <a href="https://www.threads.net/@hameezexe" target="_blank"
-                ><span
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-3s"
-                  ><i class="fa-brands fa-threads"></i></span
+                  ><i class="fa-brands fa-x-twitter"></i></span
               ></a>
             </div>
           </div>
@@ -554,25 +554,25 @@
             </div>
           </div>
           <div class="social">
-            <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
+            <a href="https://wa.me/94704404505" target="_blank"
               ><span
                 class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast"
+                ><i class="fa-brands fa-whatsapp"></i></span
+            ></a>
+            <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
+              ><span
+                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-1s"
                 ><i class="fa-brands fa-linkedin"></i></span
             ></a>
             <a href="https://www.github.com/HameezExE" target="_blank"
               ><span
-                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-1s"
+                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
                 ><i class="fa-brands fa-github"></i></span
             ></a>
             <a href="https://www.x.com/HameezExE" target="_blank"
               ><span
-                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
-                ><i class="fa-brands fa-x-twitter"></i></span
-            ></a>
-            <a href="https://www.threads.net/@hameezexe" target="_blank"
-              ><span
                 class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-3s"
-                ><i class="fa-brands fa-threads"></i></span
+                ><i class="fa-brands fa-x-twitter"></i></span
             ></a>
           </div>
         </div>
