--- a/index.html
+++ b/index.html
@@ -591,6 +591,15 @@
         the ✨ sorcery behind this Website.
       </p>
     </footer>
+    <script
+      src="https://static.elfsight.com/platform/platform.js"
+      data-use-service-core
+      defer
+    ></script>
+    <div
+      class="elfsight-app-3f2557d9-1c7c-4c5e-b437-18464d76a2a5"
+      data-elfsight-app-lazy
+    ></div>
     <script>
       const slider = document.querySelector(".proCont");
       let isDown = false;
