--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     <footer>
       <p>
         Crafted one pixel at a time with <i class="fas fa-heartbeat"></i> by
-        <span class="highlighted">Hameez.</span>
+        <a href="https://hameez.dev" class="highlighted">Hameez</a>.
         <br />
         <a
           href="https://github.com/HameezExE/hameezexe.github.io"
